added pdflatex support for blanks in filenames

--- a/latex_report_template/report_single_page_template.tex
+++ b/latex_report_template/report_single_page_template.tex
@@ -35,16 +35,16 @@
 		\begin{center}
 		\begin{tabular}{ccc}
 			&   % empty
-			\includegraphics[scale=\figurescale]{{\figureprefix_01_ha_top}}        &
+			\includegraphics[scale=\figurescale]{{"\figureprefix_01_ha_top"}}        &
 			\\  % empty
-			\includegraphics[scale=\figurescale]{{\figureprefix_02_ha_left}}       &
-			\includegraphics[scale=\figurescale]{{\figureprefix_03_ha_front}}      &
-			\includegraphics[scale=\figurescale]{{\figureprefix_04_ha_right}}      \\
+			\includegraphics[scale=\figurescale]{{"\figureprefix_02_ha_left"}}       &
+			\includegraphics[scale=\figurescale]{{"\figureprefix_03_ha_front"}}      &
+			\includegraphics[scale=\figurescale]{{"\figureprefix_04_ha_right"}}      \\
 			&   % empty
-			\includegraphics[scale=\figurescale]{{\figureprefix_05_ha_bottom}}     &
+			\includegraphics[scale=\figurescale]{{"\figureprefix_05_ha_bottom"}}     &
 			\\  % empty
 			&   % empty -- or extra view
-			\includegraphics[scale=\figurescale]{{\figureprefix_06_ha_back}}       &
+			\includegraphics[scale=\figurescale]{{"\figureprefix_06_ha_back"}}       &
 			\\  % empty -- or extra view
 		\end{tabular}
  		%\caption*{__FIGURE_CAPTION__}
