Changelog updated for new release.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,11 @@
 Current version
++) Improved rendering of connected components.
 +) More information about faces at borders and vertex normals. See 'Info -> Mesh properties' and CLI 'gigamesh-info'.
 +) New face selection along mesh borders. See 'Select -> Faces extra -> Face - Border - ...'.
 +) Use selected vertices to select faces. See 'Select -> Faces extra -> Face - with three selected vertices (SelMVerts)'.
 +) Mesh cleaning and repair improved to keep bridges, which were formerly removed together with dangling faces.
++) PDF generation: several improvements and bugfixes for the windows and the linux build.
++) Bugfix: wrong normals per vertex exported/saved.
 +) Bugfix: swapped mouse buttons for selection of positions (SelMPos).
 +) Minor bugfixes.
 
