--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 Current version
-+) Minor changes.
++) Bugfix: more robust import i.e. automatically neglect out-of-range vertex indices in faces at load time.
 
 Version 190531
 +) Improved rendering of connected components.
