--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 Current version
 +) Bugfix: more robust import i.e. automatically neglect out-of-range vertex indices in faces at load time.
++) Selection of background label. See "Select -> Select Vertices by Value/Type/Index -> Vertics - Labeled Background".
 +) CLI gigamesh-clean: Option '-j', '--set-id-remove-trailing-chars' for basic meta-data added. See '--help' for details.
 +) CLI gigamesh-clean: Option '-o', '--set-material-id-forced' for basic meta-data added. See '--help' for details.
 
