--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,8 @@ Current version
 +) Bugfix: Inconsistent behaviours of Slider dialogs regarding the factor property
 +) Bugfix: Fixed a bug when exporting ASCII plys with polylines
 +) Bugfix: Suggested filename for exporting function values is now correct
++) Bugfix: Fixed crash in Exporting Image Stacks
++) Bugfix: Polylines from Isolines: fixed cases, where the Isoline is only touching the triangles
 
 Version 190805
 +) New: Selection by normal vectors. See "Select -> Vertices Normal Sphere". Attention: unstable in Windows!
