--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 Current version
 +) New: Face selection by normal vectors. See "Select -> Normal-Sphere Faces".
++) New: Export face normal vectors
 +) New: Support for textured ply and obj files
 +) New: Basic support for obj-mtl files. Currently, only reading of map_Kd is used to parse textures.
 +) New: Setting of log verbosity by command line ("--log-level [0-4]")
@@ -10,6 +11,7 @@ Current version
 +) Improved: The function value of SelPrim can be chosen by the user, when executing "Analyze -> Polylines from &Isovalue / Functionvalue".
 +) Improved: Reduced Point-Cloud rendering now works with all Render-Passes
 +) Improved: Logging performance should now be better in various places
++) Improved: NormalSpheres now consider Area (length) of the normals
 +) Bugfix: fixed exporting differnt DPI values for x and y when exporting screenshots
 +) Bugfix: Slider dialogs are now emitting exact values
 +) Bugfix: Inconsistent behaviours of Slider dialogs regarding the factor property
