--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,11 +8,13 @@ Current version
 +) New: Feature vector export "File -> Export Feature Vectors (per Vertex)"
 +) New: Function Value import "File -> Import Function Values (per Vertex)"
 +) New: Mapping function values to feature-vector elements "Functions -> Feature Vectors - Extra Functions -> Function Value to Feature Vector"
++) New: Added the option to show the whole centerview highlight in front of the mesh
 +) Improved: The function value of SelPrim can be chosen by the user, when executing "Analyze -> Polylines from &Isovalue / Functionvalue".
 +) Improved: Reduced Point-Cloud rendering now works with all Render-Passes
 +) Improved: Logging performance should now be better in various places
 +) Improved: NormalSpheres now consider Area (length) of the normals
-+  Improved: Exporting image stack allows the user now to select a folder
++) Improved: Exporting image stack allows the user now to select a folder
++) Improved: Apply transform now emits progress and resets view after being done
 +) Bugfix: fixed exporting differnt DPI values for x and y when exporting screenshots
 +) Bugfix: Slider dialogs are now emitting exact values
 +) Bugfix: Inconsistent behaviours of Slider dialogs regarding the factor property
