- Missing printHelp in meshgeneratefeaturevectors25d.cpp added. - Exit vs. return bug fixed in meshgeneratefeaturevectors25d.cpp. - printVersion for gigamesh-clean.cpp ... other CLIs should be adapted. - CHANGELOG updated.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 Current version
 +) Improved: Matrix Dialog
++) Bugfix: missing text for 'gigamesh-featurevectors --help' added.
++) Changed: gigamesh-featurevectors stores the maximum element of the feature vector into the function value i.e. quality field.
 
 Version 200405
 +) New: Support for meshes with n-gon faces.
