- fixed a bug when exporting screenshots with a '.' in the name - updated commentary in CMakeLists.txt regarding minimal compiler versions - updated changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ Current version
 +) Improved: Matrix Dialog
 +) Improved: options of 'gigamesh-featurevectors'.
 +) Bugfix: missing text for 'gigamesh-featurevectors --help' added.
++) Bugfix: fixed a bug, when exporting screenshots with filenames containing a '.' .
 +) Changed: gigamesh-featurevectors stores the maximum element of the feature vector into the function value i.e. quality field.
 
 Version 200405
