--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@ Current version
 +) Improved: Matrix Dialog
 +) Improved: Normal vector computation per vertex. See 'Edit -> Vertices - Recompute Normals" and enter values larger than 0.
 +) Improved: options of 'gigamesh-featurevectors'.
++) Improved: When changing the light-position, only the ones manipulated are shown.
 +) Bugfix: missing text for 'gigamesh-featurevectors --help' added.
 +) Bugfix: fixed a bug, when exporting screenshots with filenames containing a '.' .
 +) Bugfix: normals are now correctly imported when loading binary-ply files and obj-files.
