--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ Current version
 +) New: Toolbar button for screenshots.
 +) New: Function to change length of light-vectors. See 'Settings -> Light Vectors Length'.
 +) New: Function to set alpha-value of vertices. See 'Edit -> Vertices - Set Vertex Alpha'.
++) New: Double-click centers the view on the clicked position.
 +) Improved: Matrix Dialog
 +) Improved: Normal vector computation per vertex. See 'Edit -> Vertices - Recompute Normals" and enter values larger than 0.
 +) Improved: options of 'gigamesh-featurevectors'.
