- Mesh info shows singular vertex count (AKA double cones). - gigamesh-clean writes connected components count into the meta-data file.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,8 @@ Current version
 +) New: Function to change length of light-vectors. See 'Settings -> Light Vectors Length'.
 +) New: Function to set alpha-value of vertices. See 'Edit -> Vertices - Set Vertex Alpha'.
 +) New: Double-click centers the view on the clicked position.
++) New: Mesh info shows count of singular vertices. See 'Info -> Mesh Info'.
++) New: 'gigamesh-clean' stores number of connected component count for the input and output mesh in the meta-data file.
 +) Improved: Mass rendering of screenshots uses the settings of the current view for all 3D-models in a directory. See 'File -> Export Screenshots - Parse Directory -> Screenshots Views (PNG)'.
 +) Improved: Matrix Dialog
 +) Improved: Normal vector computation per vertex. See 'Edit -> Vertices - Recompute Normals" and enter values larger than 0.
@@ -17,7 +19,7 @@ Current version
 +) Changed: gigamesh-featurevectors stores the maximum element of the feature vector into the function value i.e. quality field.
 +) Changed: light sources can now be rotated with the keys '3' and '4'.
 +) Changed: Import and export actions in the "File" menu moved to according sub-menus.
-+) Updated help: See 'Info -> Keyboard Layout'.
++) Updated: Help. See 'Info -> Keyboard Layout'.
 
 Version 200405
 +) New: Support for meshes with n-gon faces.
