fixed a bug, when generating latex-reports with single-view

--- a/gui/latex_report_template/report_single_page_single_view_template.tex
+++ b/gui/latex_report_template/report_single_page_single_view_template.tex
@@ -33,7 +33,7 @@
 	\vspace*{\fill}
 	\begin{figure*}[!ht]
 		\begin{center}
-			\includegraphics[scale=\figurescale]{{__FIGURE_IMAGE_FILE__}}
+		        \includegraphics[scale=\figurescale]{{__FIGURE_IMAGE_FILE__}.png}
  		%\caption*{__FIGURE_CAPTION__}
  		%\label{__FIGURE_LABEL__}
 		\end{center}
