--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
-Current version
+Current Version
++) Improved: Rendering performance
+
+Version 200529
 +) New: MSII filtering can be applied using the GUI with default settings. See 'Analyze -> MSII Feature Vectors and Function Value (Quick)'.
 +) New: Toolbar button for screenshots.
 +) New: Function to change length of light-vectors. See 'Settings -> Light Vectors Length'.
