--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
 Current Version
++) New: Export of mesh meta-data as JSON, TTL (Terse RDF Triple Language) and XML.
++) New: Meta-data export options for 'gigamesh-info'. See options '-j -x -t -l -a' as well as '--help'.
 +) New: Option to export backgrounds with PNGs: See 'File -> Export Screenshots -> PNG - Keep Background'.
 +) Improved: Rendering performance.
 +) Bugfix: fixed Screenshot Views (PDF with PNG+TEX), when exporting views with a vertical axis.
