Created CClicense LaTeX templates

--- a/gui/latex_report_template/report_single_page_cclicense.tex
+++ b/gui/latex_report_template/report_single_page_cclicense.tex
@@ -7,6 +7,12 @@
 	\usepackage{graphicx}     % For inclusions of images
 	\usepackage{caption}       % Figure caption without number
 	\usepackage{numprint}   % Number formatting
+    \usepackage[
+    type={CC},
+    modifier={by-sa},
+    version={4.0},
+    ]{doclicense}
+    \usepackage{hyperxmp}
 	\usepackage[pdftex,
 	                           pdfauthor={},
 	                           pdftitle={VAT 11403 rendered with GigaMesh},
@@ -77,5 +83,7 @@
 			\end{tabular}
 		\end{tabular}
 	\end{center}
-
+\clearpage
+\doclicenseThis
 \end{document}
+
